<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"
    android:background="@drawable/pattern"
    tools:context=".Login.SignUpFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/pattern"
        android:orientation="vertical"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/adView"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="0dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="60dp"
            android:background="@drawable/btn_login"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/Email"
            android:textColor="#A6A6A6"
            android:textColorHint="#A6A6A6"
            android:textCursorDrawable="@color/colorCursor"
            android:textSize="20sp" />

    <EditText
        android:id="@+id/password_et"
        android:hint="@string/Password"
        android:gravity="center"
        android:inputType="textPassword"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_login"
        android:textColor="#A6A6A6"
        android:textColorHint="#A6A6A6"
        android:textCursorDrawable="@color/colorCursor"
        android:layout_below="@id/email_et"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_height="60dp" />

    <Button
        android:background="@drawable/startbtn"
        android:id="@+id/sign_up_butt"
        android:text="@string/Signup"
        android:textSize="22sp"
        android:textColor="#A6A6A6"
        android:layout_marginTop="60dp"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        android:layout_below="@id/password_et"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

            </LinearLayout>

        </ScrollView>


        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:adSize="BANNER"
            app:adUnitId="@string/banner_ad_unit_id"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </RelativeLayout>

</LinearLayout>
