<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/pattern"
    tools:context=".Menu.NewQuestionsActivity">




    <include
        layout="@layout/toolbar_main"
        android:id="@+id/toolbar_main"/>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/pattern"
        android:orientation="vertical"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/adView"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="0dp">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">



                <EditText
                    android:id="@+id/questionNewEditText"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="50dp"
                    android:textSize="20sp"
                    android:background="@drawable/btn_login"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/questionNew"
                    android:textCursorDrawable="@color/colorCursor"
                    android:textColor="#A6A6A6"
                    android:textColorHint="#A6A6A6"
                    android:layout_gravity="center"
                    />

                <EditText
                    android:id="@+id/answer1EditText"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"
                    android:background="@drawable/btn_login"
                    android:ems="10"
                    android:textCursorDrawable="@color/colorCursor"
                    android:gravity="center"
                    android:hint="@string/answer1NewQuestion"
                    android:textColor="#A6A6A6"
                    android:textColorHint="#A6A6A6"
                    android:layout_gravity="center" />

                <EditText
                    android:id="@+id/answer2EditText"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"
                    android:background="@drawable/btn_login"
                    android:ems="10"
                    android:textCursorDrawable="@color/colorCursor"
                    android:gravity="center"
                    android:hint="@string/answer2NewQuestion"
                    android:textColor="#A6A6A6"
                    android:textColorHint="#A6A6A6"
                    android:layout_gravity="center" />

                <EditText
                    android:id="@+id/answer3EditText"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"
                    android:background="@drawable/btn_login"
                    android:ems="10"
                    android:textCursorDrawable="@color/colorCursor"
                    android:gravity="center"
                    android:hint="@string/answer3NewQuestion"
                    android:textColor="#A6A6A6"
                    android:textColorHint="#A6A6A6"
                    android:layout_gravity="center" />


                <Button
                    android:id="@+id/log_in_button"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/startbtn"
                    android:text="@string/Send"
                    android:textColor="#A6A6A6"
                    android:onClick="onClickSendNewQuestion"
                    android:textColorHint="#A6A6A6"
                    android:textSize="22sp"
                    android:layout_marginBottom="20dp"
                    android:layout_gravity="center"/>



            </LinearLayout>

        </ScrollView>





        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:adSize="BANNER"
            app:adUnitId="@string/banner_ad_unit_id"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"></com.google.android.gms.ads.AdView>


    </RelativeLayout>

</LinearLayout>