<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/pattern"
    tools:context=".Login.SignInActivity">




    <include
        layout="@layout/toolbar_main"
        android:id="@+id/toolbar_main"/>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/pattern"
        android:orientation="vertical"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/adView"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="0dp">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="225dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/logo"
                    android:foregroundGravity="center" />



                    <EditText
                        android:id="@+id/sing_in_username_et"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="35dp"
                        android:layout_marginRight="35dp"
                        android:layout_height="55dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/btn_login"
                        android:ems="10"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:hint="@string/Email"
                        android:textCursorDrawable="@color/colorCursor"
                        android:inputType="textPersonName"
                        android:textColor="#A6A6A6"
                        android:textColorHint="#A6A6A6"
                        android:layout_gravity="center"
                        />

                    <EditText
                        android:id="@+id/sing_in_password_et"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="35dp"
                        android:layout_marginRight="35dp"
                        android:layout_height="55dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/btn_login"
                        android:ems="10"
                        android:textCursorDrawable="@color/colorCursor"
                        android:gravity="center"
                        android:hint="@string/Password"
                        android:inputType="textPassword"
                        android:textColor="#A6A6A6"
                        android:textColorHint="#A6A6A6"
                        android:layout_gravity="center" />

                    <Button
                        android:id="@+id/log_in_button"
                        android:layout_width="match_parent"
                        android:layout_marginRight="50dp"
                        android:layout_marginLeft="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/startbtn"
                        android:text="@string/LoginButton"
                        android:textColor="#A6A6A6"
                        android:textColorHint="#A6A6A6"
                        android:textSize="22sp"
                        android:layout_gravity="center"/>


                        <Button
                            android:id="@+id/button_fb123"
                            android:layout_width="match_parent"
                            android:layout_marginRight="50dp"
                            android:layout_marginLeft="50dp"
                            android:layout_height="50dp"
                            android:onClick="ONClickloginGoogle"
                            android:textColor="#A6A6A6"
                            android:textColorHint="#A6A6A6"
                            android:textSize="22sp"
                            android:layout_gravity="center"
                            android:layout_marginTop="15dp"
                            android:text="@string/LoginButtonGoogle"
                            android:background="@drawable/startbtn" />



                <TextView
                    android:id="@+id/create_account_tv"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="90dp"
                    android:layout_marginRight="90dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/startbtn"
                    android:gravity="center"
                    android:text="@string/create_account"
                    android:textColor="#A6A6A6"
                    android:textColorHint="#A6A6A6"
                    android:textSize="20sp" />


            </LinearLayout>

        </ScrollView>


        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:adSize="BANNER"
            app:adUnitId="@string/banner_ad_unit_id"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </RelativeLayout>

</LinearLayout>